Modal Overflow-hidden

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="luxury">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -8,8 +8,9 @@
   <title>Cost-Control-React</title>
 </head>
 
-<body className="dark h-full dark:bg-white bg-red-500">
-  <div id="root"></div>
+<body className="">
+  <div id="root">
+  </div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
